kubernetes/apps/devtools/gitlab/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - gitlab.linderis.fr
  rules:
    - backendRefs:
        - name: gitlab-webservice-default
          namespace: devtools
          port: 8181
